# latex-email-daemon

./: .dockerignore  .gitignore  Dockerfile  README.md  README.org  docker-compose.yml  pdf-alias.conf  pyproject.toml
.github/workflows/: docker.yml
src/latex_email_daemon/: handle_email.py  main.py  pdf_utils.py  web.py
src/latex_email_daemon/.auctex-auto/: template.el
